lib/tests/fixtures/compiler/parser/next_in_interpolation.baseline
Error: next_in_interpolation.pp:6:19: next statement cannot be used inside an interpolated string.
  "${ if true { next } }"
                ^~~~
