lib/tests/fixtures/compiler/parser/next_in_interpolation.pp
[].each |$x| {
    # legal
    notice "${ 'foo'.each |$x| { if $x == 'o' { next } $x } }"

    # not legal
    "${ if true { next } }"
}
